--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                             <h5 class="exp_month">August 2022 - March 2023
                             </h5>
                             <p class="exp_details">As a Frontend Intern at
-                                Skillup IT Pace, I had the opportunity to work on various web development projects
+                                Skillup IT Academy, I had the opportunity to work on various web development projects
                                 and enhance my skills</p>
                             <h6 class="exp_duties">My duties in this internship
                             </h6>
