--- a/index.html
+++ b/index.html
@@ -607,11 +607,10 @@
                         <div class="html_inner">
                             <div class="html_para">
                                 <h4 class="html_para_head">Python</h4>
-                                <p class="html_para_text">Proficient in writing clean, semantic HTML code and creating
-                                    well-structured website
-                                    layouts. Experienced in using HTML to implement responsive designs, optimize for
-                                    search engines (SEO), and enhance accessibility. Skilled in integrating HTML with
-                                    CSS and JavaScript to develop interactive and dynamic web pages.
+                                <p class="html_para_text">"I've grasped the fundamentals
+                                    of Python programming, including variables, data types, loops, conditionals,
+                                    functions, and basic syntax. I can write simple programs, manipulate data, and
+                                    understand how to structure code effectively."
                                 </p>
                             </div>
                             <div class="html_logo">
