--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 I'm constantly learning and exploring new technologies to enhance my skills.
                             </p>
                         </div>
-                        <a href="Sayyed MOhd raza (1).pdf" download="cv" style="width: fit-content; transform: translateY(0%);">
+                        <a href="Resume.pdf" download="cv" style="width: fit-content; transform: translateY(0%);">
                             <button class="down_cv_btn" data-aos="fade-bouncein">
                                 Download My CV
                                 <span class="btnspn"></span>
